--- a/scss/projects.scss
+++ b/scss/projects.scss
@@ -2,8 +2,84 @@ body {
   background-color: #EEEEEE;
 }
 
+.heading {
+  margin-bottom: 1.5em;
+  span.title {
+    /* My Projects: */
+    font-family: SourceSansPro-Light;
+    color: #4A4A4A;
+    letter-spacing: 0.57px;
+    line-height: 27px;
+    font-size: 30px;
+  }
+  span.filter {
+    /* FILTER: */
+    font-family: SourceSansPro-Bold;
+    font-size: 12px;
+    color: #4A4A4A;
+    letter-spacing: 0.96px;
+    text-transform: uppercase;
+  }
+  span.clear-filters {
+    /* Clear Filters: */
+    font-family: SourceSansPro-Semibold;
+    font-size: 12px;
+    color: #9B9B9B;
+    letter-spacing: 0.56px;
+    margin-left: 3em;
+    &:hover {
+      color: #4A4A4A;
+      cursor: pointer;
+    }
+  }
+  img {
+    float: right;
+    margin-top: 7px;
+  }
+  .project-dropdown {
+    display: inline-block;
+  }
+
+}
+
+
+
+
 .card {
   padding: .5em 0;
+  h3 {
+    /* Value-based Healthca: */
+    font-family: SourceSansPro-Semibold;
+    font-size: 18px;
+    color: #515151;
+    letter-spacing: 0;
+    line-height: 20px;
+    margin: 3px 0 3px 0;
+  }
+  .institution {
+    /* UT – Dell Medical Sc: */
+    font-family: SourceSansPro-Semibold;
+    font-size: 14px;
+    color: #515151;
+    letter-spacing: 0.39px;
+    line-height: 20px;
+    margin: 0;
+  }
+  .project-id {
+    /* 101.DELL.VBHC: */
+    font-family: SourceSansPro-Bold;
+    font-size: 12px;
+    color: #4A4A4A;
+    letter-spacing: 0.96px;
+  }
+  .desc {
+    /* A series of three in: */
+    font-family: SourceSansPro-Regular;
+    font-size: 13px;
+    color: #515151;
+    letter-spacing: 0;
+    line-height: 19px;
+  }
   .thumb {
     height: 80px;
     background-color: #9B9B9B;
@@ -35,57 +111,12 @@ body {
   }
 }
 
-// .cards {
-//   display: flex;
-//   flex-wrap: wrap;
-//   justify-content: space-around;
-//   padding-top: 20px;
-// }
-//
-// .card {
-//   position: relative;
-//   background-color: white;
-//   max-width: 30%;
-//   margin-bottom: 20px;
-//   box-sizing: border-box;
-//   min-width: 223px;
-//   .content {
-//     padding: 5px 15px 30px 15px;
-//   }
-//   .thumb {
-//     height: 80px;
-//     background-color: #9B9B9B;
-//     background-image: url("http://fillmurray.com/200/80");
-//   }
-//   p {
-//     font-family: SourceSansPro-Regular;
-//     font-size: 13px;
-//     color: #515151;
-//     letter-spacing: 0.5px;
-//     line-height: 20px;
-//
-//     .institution {
-//       font-family: SourceSansPro-Bold;
-//       text-transform: uppercase;
-//       font-size: 10px;
-//       color: #4A4A4A;
-//       letter-spacing: 0.8px;
-//     }
-//     .client {
-//       /* Dell Medical School: */
-//       font-family: SourceSansPro-Semibold;
-//       font-size: 10px;
-//       color: #4A4A4A;
-//       letter-spacing: 0;
-//     }
-//   }
-//   h3 {
-//     /* Value-based Healthca: */
-//     font-family: SourceSansPro-Semibold;
-//     font-size: 18px;
-//     color: #515151;
-//     letter-spacing: 0;
-//     line-height: 20px;
-//     margin-bottom: .5em;
-//   }
-// }
+hr {
+  height: 1px;
+  background: #969696;
+  width: 100%;
+  font-size: 1px;
+  overflow: hidden;
+  margin-top: 30px;
+  margin-bottom: 0;
+}
