updates and adds templates and partial templates

--- a/templates/partials/_header.ejs
+++ b/templates/partials/_header.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav class="navbar-default nav-top">
-  <div class="container-fluid">
+  <div class="container">
     <ul class="nav navbar-top">
       <li><a href="">CONTACTS</a></li>
       <li><a href="">EMPLOYEE DIRECTORY</a></li>
@@ -24,12 +24,12 @@
   </div>
 </nav>
 <nav class="navbar navbar-inverse navbar-default">
-  <div class="container-fluid">
+  <div class="container">
     <ul class="nav navbar-nav headertext">
       <li>
         <a href=""><img src="img/myUTx_liteGray.png" alt=""></a>
       </li>
-      <li><a href="">Projects</a></li>
+      <li><a href="projects.html">Projects</a></li>
       <li><a href="">Portfolio</a></li>
       <li><a href="">Accounts</a></li>
       <li><a href="">Research</a></li>
