--- a/templates/partials/_footer.ejs
+++ b/templates/partials/_footer.ejs
@@ -9,18 +9,18 @@
 
 
   <footer>
-    <div class="row">
-      <div class="container">
-        <div class="col-md-3 col-sm-12">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="footbtn">Knowledge</div>
         </div>
-        <div class="col-md-3 col-sm-12">
+        <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="footbtn">Training</div>
         </div>
-        <div class="col-md-3 col-sm-12">
+        <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="footbtn">Libraries</div>
         </div>
-        <div class="col-md-3 col-sm-12">
+        <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="footbtn">Ideas</div>
         </div>
       </div>
