--- a/templates/projects.ejs
+++ b/templates/projects.ejs
@@ -1,58 +1,89 @@
 <%- partial('./partials/_header') %>
 
-<link rel="stylesheet" href="css/projects.css">
+  <link rel="stylesheet" href="css/projects.css">
 
-<div class="container">
-  <div class="col-md-4 col-sm-12">
-    <div class="card">
-      <div class="thumb"></div>
-      <div class="content">
-        <p class="institution">The University of Texas at Austin</p>
-        <p class="client">Engineer Your World</p>
-        <h3>Year One</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div class="status completed"></div>
+  <div class="container">
+
+    <div class="col-md-12 heading">
+      <div class="top">
+        <span class="title">My Projects</span>
+
+        <div class="dropdown project-dropdown">
+          <button class="btn btn-sm btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <li class="dropdown-header">SORT BY</li>
+            <li><a href="#">My Projects</a></li>
+            <li><a href="#">All Projects</a></li>
+            <li><a href="#">Recently Viewed</a></li>
+            <li><a href="#">Archived</a></li>
+          </ul>
+        </div>
+
+        <div class="search">
+          <input type="text" placeholder="Search myUTx">
+          <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+        </div>
+      </div>
+      <hr id="divider">
+      <span class="filter">FILTER</span>
+      <span class="clear-filters">Clear Filters</span>
+      <img height="8" width="13" src="img/small_chevron_down.svg" alt="">
+    </div>
+
+
+    <div class="col-md-4 col-sm-12">
+      <div class="card">
+        <div class="thumb"></div>
+        <div class="content">
+          <p class="project-id">101.DELL.VBHC</p>
+          <p class="institution">UT - Dell Medical School</p>
+          <h3>Value-based Healthcare Modules 1-3</h3>
+          <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="status completed"></div>
+        </div>
       </div>
     </div>
+    <div class="col-md-4 col-sm-12">
+      <div class="card">
+        <div class="thumb"></div>
+        <div class="content">
+          <p class="project-id">101.DELL.VBHC</p>
+          <p class="institution">UT - Dell Medical School</p>
+          <h3>Value-based Healthcare Modules 1-3</h3>
+          <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="status completed"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 col-sm-12">
+      <div class="card">
+        <div class="thumb"></div>
+        <div class="content">
+          <p class="project-id">101.DELL.VBHC</p>
+          <p class="institution">UT - Dell Medical School</p>
+          <h3>Value-based Healthcare Modules 1-3</h3>
+          <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="status completed"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 col-sm-12">
+      <div class="card">
+        <div class="thumb"></div>
+        <div class="content">
+          <p class="project-id">101.DELL.VBHC</p>
+          <p class="institution">UT - Dell Medical School</p>
+          <h3>Value-based Healthcare Modules 1-3</h3>
+          <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="status completed"></div>
+        </div>
+      </div>
+    </div>
+
+
+
   </div>
 
-  <div class="col-md-4 col-sm-12">
-    <div class="card">
-      <div class="thumb"></div>
-      <div class="content">
-        <p class="institution">The University of Texas at Austin</p>
-        <p class="client">Engineer Your World</p>
-        <h3>Year One</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div class="status completed"></div>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-4 col-sm-12">
-    <div class="card">
-      <div class="thumb"></div>
-      <div class="content">
-        <p class="institution">The University of Texas at Austin</p>
-        <p class="client">Engineer Your World</p>
-        <h3>Year One</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div class="status completed"></div>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-4 col-sm-12">
-    <div class="card">
-      <div class="thumb"></div>
-      <div class="content">
-        <p class="institution">The University of Texas at Austin</p>
-        <p class="client">Engineer Your World</p>
-        <h3>Year One</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div class="status completed"></div>
-      </div>
-    </div>
-  </div>
-  
-</div>
-
-<%- partial('./partials/_footer') %>
+  <%- partial('./partials/_footer') %>
